Fix dark mode shadows

--- a/src/scss/veera-variables-dark.scss
+++ b/src/scss/veera-variables-dark.scss
@@ -677,11 +677,10 @@
     --v-cards-sizing-padding-large: var(--v-spacing-07);
     --v-cards-sizing-radius-medium: var(--v-radius-02);
     --v-cards-sizing-radius-large: var(--v-radius-03);
-    --v-box-shadow-elevation-2px-dark-mode: 0px 1px 5px 0px #30323b;
-    --v-box-shadow-elevation-4px-dark-mode: 0px 4px 10px 0px #30323b;
-    --v-box-shadow-focus-ring-outset-dark-mode: 0px 0px 0px 1px #131317, 0px 0px 0px 3px #669cc8;
-    --v-box-shadow-focus-ring-inset-dark-mode: 0px 0px 0px 2px #131317 inset,
-      0px 0px 0px 4px #669cc8 inset;
+    --v-box-shadow-elevation-2px: 0px 1px 5px 0px #30323b;
+    --v-box-shadow-elevation-4px: 0px 4px 10px 0px #30323b;
+    --v-box-shadow-focus-ring-outset: 0px 0px 0px 1px #131317, 0px 0px 0px 3px #669cc8;
+    --v-box-shadow-focus-ring-inset: 0px 0px 0px 2px #131317 inset, 0px 0px 0px 4px #669cc8 inset;
   }
 }
 [data-v-color-scheme='dark'] {
@@ -1348,9 +1347,8 @@
   --v-cards-sizing-padding-large: var(--v-spacing-07);
   --v-cards-sizing-radius-medium: var(--v-radius-02);
   --v-cards-sizing-radius-large: var(--v-radius-03);
-  --v-box-shadow-elevation-2px-dark-mode: 0px 1px 5px 0px #30323b;
-  --v-box-shadow-elevation-4px-dark-mode: 0px 4px 10px 0px #30323b;
-  --v-box-shadow-focus-ring-outset-dark-mode: 0px 0px 0px 1px #131317, 0px 0px 0px 3px #669cc8;
-  --v-box-shadow-focus-ring-inset-dark-mode: 0px 0px 0px 2px #131317 inset,
-    0px 0px 0px 4px #669cc8 inset;
+  --v-box-shadow-elevation-2px: 0px 1px 5px 0px #30323b;
+  --v-box-shadow-elevation-4px: 0px 4px 10px 0px #30323b;
+  --v-box-shadow-focus-ring-outset: 0px 0px 0px 1px #131317, 0px 0px 0px 3px #669cc8;
+  --v-box-shadow-focus-ring-inset: 0px 0px 0px 2px #131317 inset, 0px 0px 0px 4px #669cc8 inset;
 }
