--- a/src/scss/veera-variables.scss
+++ b/src/scss/veera-variables.scss
@@ -774,12 +774,7 @@
   --v-cards-sizing-radius-medium: var(--v-radius-02);
   --v-cards-sizing-radius-large: var(--v-radius-03);
   --v-box-shadow-elevation-2px: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-  --v-box-shadow-elevation-2px-dark-mode: 0px 1px 5px 0px #30323b;
   --v-box-shadow-elevation-4px: 0px 4px 10px 0px rgba(0, 0, 0, 0.14);
-  --v-box-shadow-elevation-4px-dark-mode: 0px 4px 10px 0px #30323b;
   --v-box-shadow-focus-ring-outset: 0px 0px 0px 1px #ffffff, 0px 0px 0px 3px #337bb5;
-  --v-box-shadow-focus-ring-outset-dark-mode: 0px 0px 0px 1px #131317, 0px 0px 0px 3px #669cc8;
   --v-box-shadow-focus-ring-inset: 0px 0px 0px 2px #337bb5 inset, 0px 0px 0px 4px #ffffff inset;
-  --v-box-shadow-focus-ring-inset-dark-mode: 0px 0px 0px 2px #131317 inset,
-    0px 0px 0px 4px #669cc8 inset;
 }
